@@ -1,4 +1,4 @@
-.TH "eix" "1" "$Date: 2012-04-14 03:00:00 +0100 (Wed, 14 Apr 2012)$" "@PACKAGE_STRING@" ""
+.TH "eix" "1" "$Date: 2012-04-15 17:45:00 +0200 (Sun, 15 Apr 2012)$" "@PACKAGE_STRING@" ""
 .\" {{{ NAME
 .SH "NAME"
 .B eix
@@ -927,13 +927,13 @@ This is version 3.14p which will be installed into the slot "GNAT-3.14p".
 .B 2.0.0_rc1-r6
 This is version 2.0.0_rc1-r6, and SLOT is either empty or "0".
 .TP
-.B 1.0+i+l+v+s!f!m!p!b!s!t!u!i!d!P{tbz2}
+.B 1.0*ilvs^fmpbstuidP{tbz2}
 This is version 1.0 which is subject to
 PROPERTIES="interactive live virtual set" as well as
 RESTRICT="fetch mirror primaryuri binchecks strip test userpriv installsources bindist parallel"
 Moreover, a *.tbz2 file (binary package) exists for that version in B<PKGDIR>.
 .TP
-.B 5.0-r3(5.0R3)!f
+.B 5.0-r3(5.0R3)^f "    or    " 5.0-r3:5.0R3^f
 This is version 5.0-r3 which will be installed into SLOT 5.0R3 and has
 fetch restrictions.
 
