@@ -3,6 +3,7 @@
 *eix-0.25.4
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Introduce -y (--any) to select any match field: don't miss anything.
+	- Default format: new properties/restrictions separator: #/^
 	- Set umask 002 in eix-update unless option -o is used, see
 	  http://bugs.gentoo.org/show_bug.cgi?id=408509
 	- Rely on working delete 0; should speed up things slightly
